--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="index.html">
             <h1>Movie Deck</h1>
         </a>
     </header>
